# gst-deepgram

./: .clang-format  .env.example  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: gstdeepgramsink.c  main.c
src/apps/: CMakeLists.txt
src/apps/transcribe-basic/: CMakeLists.txt  transcribe_basic.c
src/plugins/: CMakeLists.txt  deepgramws.c  deepgramws.h  gstdeepgramsink.c
